mvn-droolsjbpm-build-bootstrap: Autospec creation for version 6.3.0.final

--- a/options.conf
+++ b/options.conf
@@ -1,7 +1,7 @@
 [package]
 name = mvn-droolsjbpm-build-bootstrap
 url = https://github.com/kiegroup/droolsjbpm-build-bootstrap/archive/6.3.0.Final.tar.gz
-archives = https://repo1.maven.org/maven2/org/optaplanner/optaplanner-bom/6.3.0.Final/optaplanner-bom-6.3.0.Final.pom :
+archives = https://repo1.maven.org/maven2/org/optaplanner/optaplanner-bom/6.3.0.Final/optaplanner-bom-6.3.0.Final.pom : https://repo1.maven.org/maven2/org/kie/kie-parent-metadata/6.3.0.Final/kie-parent-metadata-6.3.0.Final.pom :
 giturl = https://github.com/kiegroup/droolsjbpm-build-bootstrap.git
 
 [autospec]
